// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component compontent snapshots renders a component with an error message 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders a required component 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
      <span
        class="required-star"
      >
        *
      </span>
    </label>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
      required=""
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders the default component 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders with a character counter 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <span
      class="usa-hint"
    >
      0
    </span>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders with a character counter and maxLength 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <span
      class="usa-hint"
    >
      0
       / 50
    </span>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      maxlength="50"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders with a character counter and message 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <span
      class="usa-hint"
    >
      This is a character count message 
      0
    </span>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders with a character counter, maxLength, and message 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <span
      class="usa-hint"
    >
      This is a character count message 
      0
       / 50
    </span>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      maxlength="50"
      name="testing-textarea"
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots renders with a placeholder 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <textarea
      class="usa-textarea"
      id="test-input-area"
      name="testing-textarea"
      placeholder="This is example placeholder text."
    />
  </div>
</div>
`;

exports[`TextArea component compontent snapshots success 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label"
      for="test-input-area"
    >
      Testing TextArea
    </label>
    <textarea
      class="usa-textarea usa-input--success"
      id="test-input-area"
      name="testing-textarea"
    />
  </div>
</div>
`;
